# AGENT_GIE-DA

./: .env.example  Dockerfile  README.md  pyproject.toml
docs/: architecture.md  index.html
scripts/: start_local.command
src/stock_agents/: __init__.py
src/stock_agents/agents/: base.py  debate.py  fundamental.py  risk.py  sentiment.py  synthesis.py  technical.py
src/stock_agents/api/: app.py
src/stock_agents/core/: config.py  orchestrator.py  schemas.py
src/stock_agents/data/: __init__.py  mock_provider.py  mock_social_provider.py  provider.py  social_analysis.py  social_provider.py  stooq_provider.py  technical_analysis.py  x_provider.py
src/stock_agents/llm/: ollama.py
tests/: test_api.py  test_debate_agents.py  test_orchestrator.py  test_social_data.py  test_stooq_provider.py  test_technical_analysis.py
